[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/ShootingEnemy/ShootingEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/alien_1.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ShootingEnemy" type="Node2D"]
script = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 2
playing = true

[node name="ShootAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
